kit description and item lore adjustments